kernel manages keybuffer, and introduced keyboard lock

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "types.h": "c",
         "stdbool.h": "c",
         "timer.h": "c",
-        "multiboot.h": "c"
+        "multiboot.h": "c",
+        "keyboard.h": "c"
     }
 }
